Устранение замечаний